# functon

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: factorial.py  fibonaci.py  hello_world.py  triple.py
functon/: __init__.py  core.py  exceptions.py  operators.py  statements.py  types.py
tests/: test_dummy.py
